2006-02-18  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Test: fast/js/toString-exception.html

        Reviewed by Maciej.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=7343
          REGRESSION: fast/js/toString-overrides.html fails when run multiple times

        * kjs/array_object.cpp:
        (ArrayProtoFunc::callAsFunction): Remove the object from the visited elements set before
        returning an error.

2006-02-18  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - http://bugzilla.opendarwin.org/show_bug.cgi?id=7345
          add insert and remove to KXMLCore::Vector

        * kxmlcore/Vector.h: Added "moveOverlapping", which is used in both
        insert and remove to slide elements within the vector. Also added
        "insert" and "remove" functions.

2006-02-16  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by John.

        - Fixed <rdar://problem/4448534> TOT REGRESSION: crash in KJS::
        Bindings::Instance::deref when leaving page @ gigaom.com

        * bindings/c/c_instance.cpp:
        (KJS::Bindings::CInstance::~CInstance): Since we cache the class object
        globally, we shouldn't delete it, so don't.

2006-02-16  Timothy Hatcher  <timothy@apple.com>

        Added -Wno-deprecated-declarations to all the ObjC binding files to prevent deprecation
        warnings. Using <rdar://problem/4448350> to track this.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * bindings/objc/objc_jsobject.h: Removed empty file.
        * bindings/objc/objc_jsobject.mm: Removed empty file.

2006-02-16  Tim Omernick  <timo@apple.com>

        Reviewed by Geoff.

        <rdar://problem/4428609> Flash Player 8.0.22 can crash Safari (and WebKit apps) with
        javascript disabled (7015)

        * bindings/NP_jsobject.cpp:
        (_NPN_CreateNoScriptObject):
        Returns an NPObject which is not bound to a JavaScript object.  This kind of NPObject